add_subdirectory("libbgload")
add_subdirectory("libblit")
add_subdirectory("libdraw")
add_subdirectory("libfont")
add_subdirectory("libgrbase")
add_subdirectory("libjoy")
add_subdirectory("libkey")
add_subdirectory("libmouse")
add_subdirectory("librender")
add_subdirectory("libscroll")
add_subdirectory("libsdlhandler")
add_subdirectory("libtext")
add_subdirectory("libvideo")
add_subdirectory("libwm")
add_subdirectory("mod_blendop")
add_subdirectory("mod_cd")
add_subdirectory("mod_crypt")
add_subdirectory("mod_debug")
add_subdirectory("mod_dir")
add_subdirectory("mod_draw")
add_subdirectory("mod_effects")
add_subdirectory("mod_file")
add_subdirectory("mod_flic")
add_subdirectory("mod_grproc")
add_subdirectory("mod_joy")
add_subdirectory("mod_key")
add_subdirectory("mod_m7")
add_subdirectory("mod_map")
add_subdirectory("mod_math")
add_subdirectory("mod_mathi")
add_subdirectory("mod_mem")
add_subdirectory("mod_mouse")
add_subdirectory("mod_path")
add_subdirectory("mod_proc")
add_subdirectory("mod_rand")
add_subdirectory("mod_regex")
add_subdirectory("mod_say")
add_subdirectory("mod_screen")
add_subdirectory("mod_scroll")
add_subdirectory("mod_sort")
add_subdirectory("mod_sound")
add_subdirectory("mod_string")
add_subdirectory("mod_sys")
add_subdirectory("mod_text")
add_subdirectory("mod_time")
add_subdirectory("mod_timers")
add_subdirectory("mod_video")
add_subdirectory("mod_wm")
